tests/errors/python/import_error/dan-build.py
import not_a_module
